language-server/src/tests/snapshots/gleam_language_server__tests__definition__goto_definition_constant.snap
---
source: language-server/src/tests/definition.rs
expression: output
---
----- Jumping from `src/app.gleam`

const value = 25

const my_constant = value
                     ↑   

----- Jumped to `src/app.gleam`

const value = 25
↑▔▔▔▔▔▔▔▔▔▔     

const my_constant = value
