language-server/src/tests/snapshots/gleam_language_server__tests__definition__goto_definition_constant_record.snap
---
source: language-server/src/tests/definition.rs
expression: output
---
----- Jumping from `src/app.gleam`

type Wibble {
  Wibble(Int)
}

const wibble = Wibble(10)
                   ↑     

----- Jumped to `src/app.gleam`

type Wibble {
  Wibble(Int)
  ↑▔▔▔▔▔▔▔▔▔▔
}

const wibble = Wibble(10)
