language-server/src/tests/snapshots/gleam_language_server__tests__definition__goto_definition_from_alternative_pattern.snap
---
source: language-server/src/tests/definition.rs
expression: output
---
----- Jumping from `src/app.gleam`

type Wibble {
  Wibble
  Wobble
}

fn warble(wibble: Wibble) {
  case wibble {
    Wibble | Wobble -> 0
             ↑          
  }
}

----- Jumped to `src/app.gleam`

type Wibble {
  Wibble
  Wobble
  ↑▔▔▔▔▔
}

fn warble(wibble: Wibble) {
  case wibble {
    Wibble | Wobble -> 0
  }
}
