language-server/src/tests/snapshots/gleam_language_server__tests__definition__goto_definition_from_anonymous_function.snap
---
source: language-server/src/tests/definition.rs
expression: output
---
----- Jumping from `src/app.gleam`

pub type Wibble

pub fn main() {
  fn(w: Wibble) { todo }
         ↑              
}

----- Jumped to `src/app.gleam`

pub type Wibble
↑▔▔▔▔▔▔▔▔▔▔▔▔▔▔

pub fn main() {
  fn(w: Wibble) { todo }
}
