language-server/src/tests/snapshots/gleam_language_server__tests__definition__goto_definition_function_argument_label_from_definition.snap
---
source: language-server/src/tests/definition.rs
expression: output
---
----- Jumping from `src/app.gleam`

pub fn replace(in string: String, each pattern: String) -> String {
               ↑                                                   
  todo
}

pub fn main() {
  replace(in: "hello", each: "l")
}

----- Jumped to `src/app.gleam`

pub fn replace(in string: String, each pattern: String) -> String {
               ↑▔                                                  
  todo
}

pub fn main() {
  replace(in: "hello", each: "l")
}
